--- a/note_app.html
+++ b/note_app.html
@@ -15,7 +15,21 @@
   </header>
 
   <main>
-    
+    <article id="note-container">
+      <nav>
+        <p>Note</p>
+        <p>+</p>
+      </nav>
+      <section id="list">
+        <ul>
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>5</li>
+        </ul>
+      </section>
+    </article>
   </main>
 
   <footer>
