--- a/note_app.html
+++ b/note_app.html
@@ -15,15 +15,19 @@
   </header>
 
   <main>
-    <article id="note-container">
+    <article id="note-app-container">
       <nav>
         <p>Note</p>
         <button id="create-button">+</button>
+        <button id="return-button" class="hidden">--</button>
       </nav>
       <section id="list-container">
         <ul id="list">
 
         </ul>
+      </section>
+      <section id="note-container" class="hidden">
+
       </section>
     </article>
   </main>
