--- a/note_app.html
+++ b/note_app.html
@@ -18,8 +18,8 @@
     <article id="note-app-container">
       <nav>
         <p>Note</p>
-        <button id="create-button">+</button>
-        <button id="return-button" class="hidden">--</button>
+        <button id="create-button"><div>+</div></button>
+        <button id="return-button" class="hidden"><div><=</div></button>
       </nav>
       <section id="list-container">
         <ul id="list">
